# SMask

./: .isort.cfg  LICENSE  README.md  package-lock.json  pyproject.toml
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  alembic.ini  config.py  main.py  users.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 57eb3df43979_first_commit.py  647454df73e0_create_user.py  b1d39baecf0a_добавление_модели_task.py  d27b9a809050_create_user.py  f5c8870d8f73_custom_user.py
backend/app/api/: base.py  rout_task.py  route_auth.py  route_task.py  route_user.py
backend/app/core/: auth.py  hashing.py
backend/app/db/: base.py  base_class.py  db.py  session.py
backend/app/db/models/: task.py  user.py
backend/app/db/repository/: task.py  user.py
backend/app/routers/: users.py
backend/app/schemas/: task.py  user.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js
frontend/src/api/: client.js
frontend/src/components/: RegisterForm.jsx  TaskForm copy.jsx  TaskForm.jsx
frontend/src/styles/: Register.css
