[project]
name = "smask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.15.2",
    "fastapi>=0.115.12",
    "psycopg2-binary>=2.9.10",
    "pydantic[email]>=2.11.2",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
    "sqlalchemy2-stubs>=0.0.2a38",
    "uvicorn>=0.34.0",
]

[tool.uv.workspace]
members = ["venv"]
